ViennaAdvantage/Areas/VA005/Contents/VA005_ProductMgt.css
/* ... */
.VA005-popup > span {
    margin: 0 5px;
    cursor: pointer;
}

.VA005-Edit-UPC {
    float: right;
    font-size: 9px;
    color: rgba(var(--v-c-primary), 1);
    cursor: pointer;
}

.VA005-btn-erase {
    width: 25px;
    height: 25px;
    float: left;
    background: url('../Images/erase.png');
    margin-top: 3px;
}

.VA005-div-images {
    width: 100%;
    height: 100%;
    overflow: auto;
}

    .VA005-div-images > ul {
        list-style: none;
        padding: 0;
    }

        .VA005-div-images > ul > li {
            cursor: pointer;
            color: #fff;
        }

.VA005-imgProduct {
    /*width: 100px;
    height: 100px;*/
    margin-left: 5px;
}

.VA005-productimgul li img {
    width: 100%;
    max-height: 100px;
}

.VA005-productimgul {
    margin-top: 20px;
}

    .VA005-productimgul li {
        list-style: none;
        display: inline-block;
        width: 100px;
        float: none;
        text-align: center;
        margin: 0px 7px 10px;
        background: #f0f0f0;
        /*height: 100px;*/
        line-height: 100px;
        /*float: left;
    width: 100px;
    position: relative;
    margin-right: 20px;
    margin-bottom: 20px;
    display: block;
    cursor: pointer;*/
    }

.VA005-doc_information select {
    width: 250px;
    height: 30px;
}

.VA005-doc_information input {
    width: 250px;
    /*  height:30px;*/
}

.VA005-doc_information table {
    width: 670px !Important;
    border-spacing: 6px;
}

.VA005-doc_information {
    height: 70px;
}

p {
    margin-bottom: 0px;
}

.VA005-upload-buttons {
    background-color: rgba(var(--v-c-primary), 1);
    color: rgba(var(--v-c-on-primary), 1);
    font-weight: 200;
    font-family: helvetica;
    font-size: 14px;
    padding: 10px 15px;
    float: right;
    margin-right: 10px;
    width: 100px !Important;
}

.VA005-file-icon {
    display: inline-block;
    float: left;
    width: 30px;
    height: 30px;
    /*margin-left: 10px;
                    margin-top: 13.5px;*/
}

.VA005-img-file {
    background: url("../Images/image.png") no-repeat;
}

.VA005-doc-file {
    background: url("../Images/word.png") no-repeat;
}

.VA005-pdf-file {
    background: url("../Images/pdf.png") no-repeat;
}

.VA005-xls-file {
    background: url("../Images/excel.png") no-repeat;
}

.VA005-zip-file {
    background: url("../Images/compresed.png") no-repeat;
}

.VA005-text-file {
    background: url("../Images/text.png") no-repeat;
}

.VA005-default-file {
    background: url("../Images/default.png") no-repeat;
}

#example .file-heading {
    font-family: Arial;
    font-size: 1.1em;
    display: inline-block;
    float: left;
    width: 450px;
    margin: 0 0 0 20px;
    height: 25px;
    -ms-text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

#example .file-name-heading {
    font-weight: bold;
}

#example .file-size-heading {
    font-weight: normal;
    font-style: italic;
}

li.k-file .file-wrapper .k-upload-action {
    position: absolute;
    top: 0;
    right: 0;
}

li.k-file div.file-wrapper {
    position: relative;
    height: 75px;
    width: 100%;
}

    li.k-file div.file-wrapper h4 {
        font-size: small;
        margin-top: 0;
    }
/********Top Div For Cancelation of files*********/
.VA005-attach-file-top {
    width: 100%;
    float: left;
    margin-top: -10px;
}

.VA005-file-close-ico {
    background: url('../Images/close-file.png');
    background-repeat: no-repeat;
    width: 19px;
    height: 19px;
    float: right;
    position: relative;
    /* z-index: 999; */
    right: -10px;
    top: -3px;
}

.VA005-attach-file-content {
    /*padding: 0px 0px 0px 10px;*/
    float: left;
    width: 100%;
    /*margin-left: -10px;
    margin-top: -5px;*/
}

.VA005-attach-file-text {
    width: 75%;
    float: left;
    /*margin-right: 10px;
margin-top: -55px;*/
}

.VA005-large {
    position: relative;
    background: rgba(var(--v-c-secondary), 0.8);
    padding: 5px;
    z-index: 10;
    min-height: 200px;
    min-width: 200px;
    color: rgba(var(--v-c-on-secondary), 1);
    text-align: center;
    line-height: 200px;
    box-shadow: 2px 2px 5px #333;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 100px;
}

.VA005-leftpanelcatsearchbtn {
    /*width: 31px;
    height: 31px;
    border: 1px solid rgba(var(--v-c-on-secondary), .2);
    background: rgba(var(--v-c-secondary), 1);
    color: rgba(var(--v-c-on-secondary), 1);
    font-size: 1rem;
    border-radius: .25rem;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-left: none;*/
}
.VA005-conv-data .VA005-icons {
    height: 35px;
    display: inline-flex;
    align-items: center;
}
.VA005-uom-list .w2ui-toolbar table td {
    vertical-align: middle;
}
.VA005-middle-left-main .vis-group-user-wrap:first-child {
    border-top: 1px solid rgba(var(--v-c-on-secondary), .2);
}
.VA005-middle-left-main .vis-group-user-wrap:first-child:hover, 
.VA005-middle-left-main .vis-group-user-wrap:first-child.vis-group-selected-op {
    border-top: 1px solid rgba(var(--v-c-primary), 1);
    margin-top: 0;
}
.VA005-image-area img {
    max-width: 100%;
    max-height: 100%;
    color: rgba(var(--v-c-on-secondary), .3);
}
.vis-input-wrap .VA005-Serach-Query label,
.vis-input-wrap .VA005-Serach-Query select:focus ~ label {
    background: linear-gradient(rgba(var(--v-c-secondary), 1) 50%, transparent 50%);
}
.VA005-apanel-lb .vis-apanel-lb-toggle {
    margin-bottom: 10px;
}
.VA005-cat-caption > p label {
    display: block;
}
.VA005-catboxcheck[type="checkbox"] {
    position: absolute;
    top: 0px;
    left: 5px;
    width: 20px;
    height: 20px;
}

.VA005-catboxcheck[type="checkbox"]:checked {
    position: absolute;
}
.VA005-catboxcheck[type="checkbox"]:checked:before {
    width: 7px;
    height: 12px;
    bottom: 3px;
    border-width: 0 3px 3px 0;
}
/* ... */

